--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="./header-title.css" />
     <link rel="stylesheet" href="./button.css" />
     <link rel="stylesheet" href="./records.css" />
+    <link rel="stylesheet" href="./modal.css" />
+    <script src="script.js"></script>
+
     <title>CRUD</title>
   </head>
   <body>
@@ -22,7 +25,9 @@
       <h2 class="header-title">Cadastro de Clientes</h2>
     </header>
     <main>
-      <button type="button" class="button register">Cadastrar Cliente</button>
+      <button type="button" class="button register" id="clientRegister">
+        Cadastrar Cliente
+      </button>
       <table class="records">
         <thead>
           <tr>
@@ -66,6 +71,40 @@
           </tr>
         </tbody>
       </table>
+      <div class="modal" id="modal">
+        <div class="modal-content">
+          <header class="modal-header">
+            <h2>Novo Cliente</h2>
+            <span class="modal-close" id="modalClose">&#10006;</span>
+          </header>
+          <form class="modal-form">
+            <input
+              type="text"
+              class="modal-field"
+              placeholder="Nome do Cliente"
+            />
+            <input
+              type="text"
+              class="modal-field"
+              placeholder="E-mail do Cliente"
+            />
+            <input
+              type="text"
+              class="modal-field"
+              placeholder="Celular do Cliente"
+            />
+            <input
+              type="text"
+              class="modal-field"
+              placeholder="Cidade do Cliente"
+            />
+          </form>
+          <footer class="modal-footer">
+            <button class="button edit">Salvar</button>
+            <button class="button delet">Cancelar</button>
+          </footer>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
