tratamento de erros Js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h2 class="header-title">Cadastro de Clientes</h2>
     </header>
     <main>
-      <button type="button" class="button register" id="clientRegister">
+      <button type="button" class="button register" id="client">
         Cadastrar Cliente
       </button>
       <table class="records">
@@ -106,6 +106,6 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>Copyright &copy; Israel Santana</footer>
   </body>
 </html>
