--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h2 class="header-title">Cadastro de Clientes</h2>
     </header>
     <main>
-      <button type="button" class="button register" id="client">
+      <button type="button" class="button register mobile" id="client">
         Cadastrar Cliente
       </button>
       <table class="records">
