--- a/index.html
+++ b/index.html
@@ -72,31 +72,35 @@
             <h2>Novo Cliente</h2>
             <span class="modal-close" id="modalClose">&#10006;</span>
           </header>
-          <form class="modal-form">
+          <form id="form" class="modal-form">
             <input
               type="text"
               class="modal-field"
               placeholder="Nome do Cliente"
+              required
             />
             <input
               type="text"
               class="modal-field"
               placeholder="E-mail do Cliente"
+              required
             />
             <input
               type="text"
               class="modal-field"
               placeholder="Celular do Cliente"
+              required
             />
             <input
               type="text"
               class="modal-field"
               placeholder="Cidade do Cliente"
+              required
             />
           </form>
           <footer class="modal-footer">
-            <button class="button edit">Salvar</button>
-            <button class="button delet">Cancelar</button>
+            <button id="save" class="button edit">Salvar</button>
+            <button id="cancel" class="button delet">Cancelar</button>
           </footer>
         </div>
       </div>
