--- a/index.html
+++ b/index.html
@@ -74,24 +74,28 @@
           </header>
           <form id="form" class="modal-form">
             <input
+            id="nome"
               type="text"
               class="modal-field"
               placeholder="Nome do Cliente"
               required
             />
             <input
+            id="email"
               type="text"
               class="modal-field"
               placeholder="E-mail do Cliente"
               required
             />
             <input
+            id="telefone"
               type="text"
               class="modal-field"
               placeholder="Celular do Cliente"
               required
             />
             <input
+            id="cidade"
               type="text"
               class="modal-field"
               placeholder="Cidade do Cliente"
