--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+         <!-- <tr>
             <td>Israel</td>
             <td>israelsantana@gmail.com</td>
             <td>(41) 98904-2299</td>
@@ -63,7 +63,7 @@
               <button type="button" class="button delet">Excluir</button>
             </td>
           </tr>
-        </tbody>
+        </tbody> -->
       </table>
 
       <div class="modal" id="modal">
