feat: adiciona função que cria e atualiza a table

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button type="button" class="button register mobile" id="client">
         Cadastrar Cliente
       </button>
-      <table class="records">
+      <table class="records" id="tableClient">
         <thead>
           <tr>
             <th>Nome</th>
